<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/option_sync_now"
        android:title="@string/sync_now" />
    <item
        android:id="@+id/option_my_profile"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/nearest_store"
        android:title="@string/nearest_store" />
    <item
        android:id="@+id/option_search"
        android:title="@string/search" />
    <item
        android:id="@+id/option_user"
        android:title="@string/manage_user" />
    <item
        android:id="@+id/option_city"
        android:title="@string/manage_city" />
    <item
        android:id="@+id/option_skill"
        android:title="@string/manage_skill" />
    <item
        android:id="@+id/option_basecamp"
        android:title="@string/manage_basecamp" />
    <item
        android:id="@+id/option_logout"
        android:title="@string/logout" />
</menu>
