<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_sync_now"
            android:icon="@drawable/sync_now_black"
            android:title="@string/sync_now" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/person_black"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_nearest_store"
            android:icon="@drawable/store_black"
            android:title="@string/nearest_store" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_black"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/person_group_black"
            android:title="@string/manage_user"
            android:visible="false"/>
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/city_black"
            android:title="@string/manage_city"
            android:visible="false"/>
        <item
            android:id="@+id/nav_skill"
            android:icon="@drawable/skill_black"
            android:title="@string/manage_skill"
            android:visible="false"/>
        <item
            android:id="@+id/nav_basecamp"
            android:icon="@drawable/warehouse_black"
            android:title="@string/manage_basecamp"
            android:visible="false"/>
        <item
            android:id="@+id/nav_gudang"
            android:icon="@drawable/gudang_black"
            android:title="@string/manage_gudang"
            android:visible="false"/>
        <item
            android:id="@+id/nav_delivery"
            android:icon="@drawable/truck_fast_black"
            android:title="@string/manage_delivery"
            android:visible="false"/>
        <item
            android:id="@+id/rencana_visit_group"
            android:title="Rencana Visit"
            android:visible="false">

            <menu>
                <item
                    android:id="@+id/rencana_visit"
                    android:title="Visit Sales"
                    android:icon="@drawable/file_list_black"
                    android:visible="false"/>
                <item
                    android:id="@+id/rencana_visit_penagihan"
                    android:title="Visit Penagihan"
                    android:icon="@drawable/invoice_black"
                    android:visible="false"/>
            </menu>

        </item>
    </group>
    <item
        android:title="Lainnya">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_black"
                android:title="Logout"/>
        </menu>

    </item>

</menu>