<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    android:clickable="true"
    android:focusable="true"
    android:theme="@style/Theme.TopMortarSales.CardViewReports">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/lorem_title"
            android:theme="@style/Theme.TopMortarSales.BaseTextTitle"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:maxLines="5"
            android:ellipsize="end"
            android:text="@string/lorem_desc"
            android:theme="@style/Theme.TopMortarSales.BaseTextDescription"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/dummy_date"
            android:theme="@style/Theme.TopMortarSales.TextBaseLine"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>