<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:visibility="gone"
            android:id="@+id/ic_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_arrow_left_white" />

        <TextView
            android:id="@+id/tv_title_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_chat"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/ic_sync_now"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@mipmap/ic_sync_white"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/logo_square" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/ic_more"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@mipmap/ic_more_white"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/more" />

    </LinearLayout>

    <View
        android:id="@+id/v_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_color"/>

</LinearLayout>