<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/bg_base_clickable_round_8"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/userProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/bg_light_round_online">

            <ImageView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@android:color/transparent"
                android:src="@drawable/person_black" />

            <TextView
                android:id="@+id/initialName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NP"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black_300"
                android:background="@android:color/transparent"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginVertical="16dp"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:theme="@style/Theme.TopMortarSales.BaseTextTitle"
                    android:text="@string/list_chat_contact_name"/>

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/icCake"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/cake"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/icPhoneNumber"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="4dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/person_black"/>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:theme="@style/Theme.TopMortarSales.BaseTextDescription"
                    android:text="@string/list_chat_contact_description"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:visibility="gone"
            android:id="@+id/iv_printer"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:padding="12dp"
            android:src="@drawable/file_upload_black"
            android:contentDescription="@string/icon_upload"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/iv_upload"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:padding="12dp"
            android:src="@drawable/printer_black"
            android:contentDescription="@string/icon_printer"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/tooltip_status"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:padding="16dp"
            android:src="@drawable/status_active"
            android:contentDescription="@string/icon_tooltip_information"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/checklist"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="16dp"
            android:src="@drawable/active_circle_check"
            android:contentDescription="Icon Checklist"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/textVerified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Verified"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_active_round"
            android:theme="@style/Theme.TopMortarSales.BaseTextDescription"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:theme="@style/Theme.TopMortarSales.BaseLine"/>

</LinearLayout>